--- a/interview.html
+++ b/interview.html
@@ -15,7 +15,7 @@
 <!-- End Jekyll SEO tag -->
 </head>
 <body>
-	<header class="texture-red">
+	<header class="texture-black">
 		<div class="container"><div class="navbar">
 	<ul>
 		
@@ -92,7 +92,7 @@ been a massive success. I can access many areas of science that I wouldn’t be
 introduced to otherwise. On the other hand, Internet video, podcasts, and other
 forms of web-enabled entertainment have probably been a net negative.</p>
 
-<h4 id="10-should-i-go-to-computer-science-college">10. Should I go to computer science college?</h4>
+<h4 id="10-should-i-go-to-college-for-computer-science">10. Should I go to college for computer science?</h4>
 
 <p>College is an effective (though not always cost-effective) way to learn
 computer science and computer programming. I tried to minimize costs by going
