--- a/mentor.html
+++ b/mentor.html
@@ -15,7 +15,7 @@
 <!-- End Jekyll SEO tag -->
 </head>
 <body>
-	<header class="texture-red">
+	<header class="texture-black">
 		<div class="container"><div class="navbar">
 	<ul>
 		
