--- a/expectations.html
+++ b/expectations.html
@@ -15,7 +15,7 @@
 <!-- End Jekyll SEO tag -->
 </head>
 <body>
-	<header class="texture-red">
+	<header class="texture-black">
 		<div class="container"><div class="navbar">
 	<ul>
 		
@@ -44,7 +44,7 @@
 		<div class="container">
 			<h2 id="expectations">Expectations</h2>
 
-<p>Before the experience, I thought that it would be difficult to stay focused and end up with a finished product. I thought that I might not be able to get the language and interpreter as good as I wanted. Educationally, I knew this would teach me a lot with regards to computer science and programming, which is want I am interested in pursuing in college and as a career. I also thought it would help me get better at pursuing goals and never giving up.</p>
+<p>Before the experience, I thought that it would be difficult to stay focused and end up with a finished product. I thought that I might not be able to get the language and interpreter as good as I wanted. Educationally, I knew this would teach me a lot with regards to computer science and programming, which is what I am interested in pursuing in college and as a career. I also thought it would help me get better at pursuing goals and never giving up.</p>
 
 		</div>
 	</main></body>
