--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- End Jekyll SEO tag -->
 </head>
 <body>
-	<header class="texture-red">
+	<header class="texture-black">
 		<div class="container"><div class="navbar">
 	<ul>
 		
@@ -46,7 +46,7 @@
 
 <p><img src="/assets/josh.jpg" width="200" alt="Picture of Josh" /></p>
 
-<p>Hello, my name is Josh. My hobbies include programming and playing the cello. At Darby I am in the orchestra, Mathletes, and NHS, and cofounder of the computer club. I also like science fiction televison shows.</p>
+<p>Hello, my name is Josh. My hobbies include programming and playing the cello. At Darby, I am in the orchestra, Mathletes, and NHS, and cofounder of the computer club. I also like science fiction televison shows.</p>
 
 <h2 id="my-project">My project</h2>
 
